# com-impl

./: Cargo.toml
com-impl/: Cargo.toml  README.md
com-impl/src/: lib.rs
derive-com-impl/: Cargo.toml
derive-com-impl/src/: com_impl.rs  derive.rs  lib.rs
test-com-impl/: Cargo.toml
test-com-impl/src/: file_stream.rs  generic.rs  lib.rs
