[package]
name = "com-impl"
version = "0.1.1"
authors = ["Connie Hilarides <conni_h@outlook.com>"]
license = "MIT"
edition = "2018"
repository = "https://github.com/connicpu/com-impl"
documentation = "https://docs.rs/com-impl"
keywords = ["win32", "windows", "com"]
description = """
Automatically implement Win32 COM interfaces from Rust, along with some useful
helper types for getting it done.
"""
readme = "README.md"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.6", features = ["unknwnbase"] }
wio = "0.2.0"

[target.'cfg(windows)'.dependencies.derive-com-impl]
version = "0.1.0"
path = "../derive-com-impl"

[dev-dependencies]
winapi = { version = "0.3.6", features = ["dwrite", "winerror"] }

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
