[package]
name = "derive-com-impl"
version = "0.1.1"
authors = ["Connie Hilarides <conni_h@outlook.com>"]
license = "MIT"
edition = "2018"
repository = "https://github.com/connicpu/com-impl"
documentation = "https://docs.rs/derive-com-impl"
keywords = ["win32", "windows", "com"]
description = """
Procedural macros to help implement COM interfaces from Rust.
"""

[lib]
name = "derive_com_impl"
proc-macro = true

[dependencies]
syn = { version = "0.15.18", features = ["full"] }
quote = { version = "0.6.10", features = ["proc-macro"] }
proc-macro2 = "0.4.20"

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"

#[dev-dependencies]
#com-impl = { version = "0.1.0", path = "../com-impl" }
#wio = "0.2.0"
#winapi = { version = "0.3.6", features = ["dwrite"] }
